ensure the search bar has equal spacing on all sides in its section #55

--- a/src/CrystallineSociety/Client/CrystallineSociety.Client.Core/Components/BadgeTree.razor.scss
+++ b/src/CrystallineSociety/Client/CrystallineSociety.Client.Core/Components/BadgeTree.razor.scss
@@ -1,6 +1,6 @@
 .badge-image {
-    width: 15px;
-    height: 15px;
+    width: 8px;
+    height: 8px;
 }
 
 .right-arrow{
